--- a/html/public/index.html
+++ b/html/public/index.html
@@ -37,13 +37,12 @@
         </div>
     </nav>
 
-    <div class="col-lg-12">
-      <div class="row">
-        <div class="card shadow rounded-15">
-          <div class="card-body">
-            <div class="text-center">
-              <span class="fs-5 text-uppercase fw-bolder">hola</span>
-            </div>
+    
+    <div class="col-lg-5 mx-auto col-sm-12 styleCard">
+      <div class="card shadow rounded-15">
+        <div class="card-body">
+          <div class="text-center">
+            <span class="fs-5 text-uppercase fw-bolder">hola</span>
           </div>
         </div>
       </div>
