--- a/html/public/index.html
+++ b/html/public/index.html
@@ -30,8 +30,8 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success text-white" type="submit">Buscar</button>
+              <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+              <button class="btn btn-success text-white" type="submit">Buscar</button>
             </form>
           </div>
         </div>
